# streamcorpus-filter

./: .gitignore  README.md  TASKS.md
cpp/: CMakeLists.txt  Makefile  README.txt  b-test.cc  b.make  bench.cc  dump.cc  example_config.mk  filter.cc  filternames.thrift  i18n.txt  mk_mmap_names.cc  multifast.cc  multifast.patch  multisearch.h  multisearch_naive.cc  naive.cc  normalize.cc  normalize.h  normfoo.cc  sc2.diff  sc3.diff  scf2mmap.cc  search.h  streamcorpus.mk  test-name-strings.scf  test_filter.py  test_throughput_speed.cc  u-multifast.cc  u-multisearch_naive.cc  u-naive.cc  u-test.cc  unit.cc
cpp/lvvlib/: mmap.h  token.h
data/: dumbnames.txt  maketestdocs.py  nametesttexts.sc.xz  test-name-strings-john-smith-token-boundaries.scf  test-name-strings.json  test-stream-items-john-smith-token-boundaries.sc  trec-kba-2013-rated-documents.md  trec-kba-2013-rated-documents.txt
if/: streamcorpus-filter-v0_1_0.thrift  streamcorpus-filters-v0_1_0.thrift
py/: MANIFEST.in  Makefile  setup.py  version.py
py/src/streamcorpus_filter/: __init__.py  _filter.py  convert.py  pipeline_stage.py  ttypes.py
py/src/streamcorpus_filters/: _filter.py
py/src/tests/streamcorpus_filter/: test_streamcorpus_filter.py
py/src/tests/streamcorpus_filters/: test_streamcorpus_filters.py
